False (or malfunctioning) dependency-cycle warning when adding dupligroup objects to another group. #40290

Closed
opened 2014-05-21 07:03:47 +02:00 by Jason Clarke · 6 comments

System Information
Mac OS X

Blender Version
2.70.5 6283538 (this hash happens to have no letters in it)

Short description of error
If you try to add a group instance to another (unrelated) group, Blender will only let you do it once. After that, you will get depedency-cycle warnings when you try. Until you reload the file, then you'll be able to add one more dupli to the group before getting the error.

I don't think there's an actual dependency cycle going on (since the group you are adding to is not instanced or used anywhere in the file). However, even if there is, the warning is still malfunctioning since you are able to bypass it by reloading the file.

Exact steps for others to reproduce the error
dupli_false_alarm.zip

  1. Load up dupli_false_alarm_bug.blend. It contains a bunch of linked instances of a group called "source" from the accompanying dupli_false_alarm_source.blend. This group contains some monkeys.

  2. It also contains a group called "bug group". Try to add one of the group-instance empties to "bug group" (or any other new group you want).

  3. Once you have added one empty to the group, you will get a dependency cycle warning if you try to add any others.

  4. If you reload the file, you will be able to add one more empty to the group before the error comes back.

**System Information** Mac OS X **Blender Version** 2.70.5 6283538 (this hash happens to have no letters in it) **Short description of error** If you try to add a group instance to another (unrelated) group, Blender will only let you do it once. After that, you will get depedency-cycle warnings when you try. Until you reload the file, then you'll be able to add one more dupli to the group before getting the error. I don't think there's an actual dependency cycle going on (since the group you are adding to is not instanced or used anywhere in the file). However, even if there is, the warning is still malfunctioning since you are able to bypass it by reloading the file. **Exact steps for others to reproduce the error** [dupli_false_alarm.zip](https://archive.blender.org/developer/F89550/dupli_false_alarm.zip) 1) Load up dupli_false_alarm_bug.blend. It contains a bunch of linked instances of a group called "source" from the accompanying dupli_false_alarm_source.blend. This group contains some monkeys. 2) It also contains a group called "bug group". Try to add one of the group-instance empties to "bug group" (or any other new group you want). 3) Once you have added one empty to the group, you will get a dependency cycle warning if you try to add any others. 4) If you reload the file, you will be able to add one more empty to the group before the error comes back.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JasonClarke

Added subscriber: @JasonClarke
Lukas Tönne self-assigned this 2014-05-21 19:30:39 +02:00
Member

Probably my mistake in 003387fab5, assigning to self ...

Probably my mistake in 003387fab5, assigning to self ...

This issue was referenced by 7a86765095

This issue was referenced by 7a8676509505bf5fbf50943f3bcc561bf95fabef
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 7a86765095.

Closed by commit 7a86765095.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40290
No description provided.