Fix T40290: False (or malfunctioning) dependency-cycle warning when adding dupligroup objects to another group.

The new recursion check for groups duplicating themselves has to un-set the LIB_DOIT flag after each object, otherwise it will prevent duplicating a (non-recursive) group multiple times.